<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Modules">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/modules"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/modulesBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/back" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/modulesBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/lesson1"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:background="@drawable/moduleback"
                android:clickable="true"
                android:focusable="true"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:shadowColor="#E88CAC"
                android:shadowRadius="10"
                android:text="@string/_1"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lesson2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:background="@drawable/moduleback"
                android:clickable="true"
                android:focusable="true"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:shadowColor="#E88CAC"
                android:shadowRadius="10"
                android:text="@string/_2"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lesson3"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:background="@drawable/moduleback"
                android:clickable="true"
                android:focusable="true"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:shadowColor="#E88CAC"
                android:shadowRadius="10"
                android:text="@string/_3"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lesson4"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:background="@drawable/moduleback"
                android:clickable="true"
                android:focusable="true"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:shadowColor="#E88CAC"
                android:shadowRadius="10"
                android:text="@string/_4"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lesson5"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:background="@drawable/moduleback"
                android:clickable="true"
                android:focusable="true"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:shadowColor="#E88CAC"
                android:shadowRadius="10"
                android:text="@string/_5"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>